# gatac

./: .gitignore  .gitmodules  .readthedocs.yml  LICENSE  README.md  index.md  pyproject.toml
docs/: Makefile  _home.md  _home_root.md  changelog.md  conf.py  contributing.md  credits.md  index.md  installation.md  license.md  reproducibility.md
docs/_static/: custom.css
docs/_templates/: layout.html
docs/_templates/autosummary/: base.rst
docs/api/: index.md  preprocessing.md  tools.md
docs/cli/: combine.md  convert.md  doublets.md  features.md  filter.md  gene.md  genescore.md  index.md  metrics.md  tile.md
docs/tutorials/: index.md
gatac/: __init__.py  cli.py  convert.py  features.py  metrics.py  metrics_streaming.py  process.py  tile.py
gatac/pl/: __init__.py  fragments.py  metrics.py  motifs.py
gatac/pp/: __init__.py  _utils.py  amulet.py  convert.py  features.py  filter.py  gene.py  genescore.py  genome.py  metrics.py  process.py  tile.py
gatac/tl/: __init__.py  _bias_matching.py  chromvar.py  gsea.py  gsea_gpu.py  lda.py  markers.py  motif.py  peaks.py  spectral.py
