[project]
name = "gatac"
version = "0.1.0"
description = "GPU-accelerated ATAC-seq fragment processing and tile matrix generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0,<1.32",
    "pyarrow>=22.0.0",
    "duckdb>=1.0",
    "scanpy>=1.11.5",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
cuda12 = [
    "cudf-cu12==26.02.*",
    "cudf-polars-cu12==26.02.*",
    "cuml-cu12==26.02.*",
]
cuda13 = [
    "cudf-cu13==26.02.*",
    "cudf-polars-cu13==26.02.*",
    "cuml-cu13==26.02.*",
]

[project.scripts]
gatac = "gatac.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
