[project]
name = "gatac"
version = "0.1.0"
description = "GPU-accelerated ATAC-seq fragment processing and tile matrix generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0,<1.32",
    "pyarrow>=22.0.0",
    "duckdb>=1.0",
    "scanpy>=1.11.5",
    "tqdm>=4.66.0",
    "pyfaidx>=0.9.0.4",
]

[project.optional-dependencies]
cuda12 = [
    "cudf-cu12==26.02.*",
    "cudf-polars-cu12==26.02.*",
    "cuml-cu12==26.02.*",
]
cuda13 = [
    "cudf-cu13==26.02.*",
    "cudf-polars-cu13==26.02.*",
    "cuml-cu13==26.02.*",
]


[project.scripts]
gatac = "gatac.cli:main"

[tool.uv]
conflicts = [
    [
        { extra = "cuda12" },
        { extra = "cuda13" },
    ],
]

[dependency-groups]
docs = [
    "sphinx>=9.1",  # TODO: remove conf.py monkey-patch once executablebooks/MyST-Parser#1052 is fixed
    "scanpydoc>=0.13",
    "myst-parser>=4.0",
    "myst-nb>=1.1",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
    "sphinxcontrib-mermaid>=0.9",
    "sphinx-autobuild>=2024",
    "numpydoc>=1.7",
    "sphinx-book-theme>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
